# PromptWizard

./: hello.py  pyproject.toml  requirements.txt
.cursor/rules/: promptwizard-custom-llm-config.mdc  promptwizard-glue-structure.mdc
demos/scenarios/: .env  README.md  app.py  dataset_scenarios_demo.ipynb  generic_data_processor.py  gradio_ui.py  requirements.txt  run_all_scenarios.py  scenario1_no_data_no_examples.py  scenario1_ui_enhanced.py  scenario2_no_data_synthetic_examples.py  scenario2_ui_enhanced.py  scenario3_ui_enhanced.py  scenario3_with_data_with_examples.py  synthetic_data_generator.py  train_synthetic.jsonl
demos/scenarios/configs/: llm_config.yaml  promptopt_config.yaml  setup_config.yaml
demos/scenarios/experiments/io_logs/: best_prompt.jsonl  io_logs.jsonl
demos/scenarios/results/: no_data_no_examples_20250519_183929.json
promptwizard.egg-info/: PKG-INFO  requires.txt
promptwizard/glue/: llm_config_readme.md
promptwizard/glue/common/llm/: custom_llm_template.py  llm_mgr.py
promptwizard/glue/promptopt/: instantiate.py
